goTest/k8s/test-pod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-nginx
  namespace: default
  labels:
    app: test-nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: test-nginx
  template:
    metadata:
      labels:
        app: test-nginx
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          imagePullPolicy: Always
          resources:
            limits:
              cpu: 300m
              memory: 64Mi
            requests:
              cpu: 200m
              memory: 64Mi
