goTest/k8s/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: webhook
  namespace: default
spec:
  selector:
    app: webhook-pod-mutate
  ports:
    - port: 443
      targetPort: 8443
