goTest/k8s/validatingwebhook.yaml
# validatingwebhook.yaml
kind: ValidatingWebhookConfiguration
apiVersion: admissionregistration.k8s.io/v1beta1
metadata:
  name: my-mutating-webhook
webhooks:
  - name: webhook.default.svc.cluster.local
    rules:
      - operations: ["CREATE"]
        apiGroups: ["apps"]
        apiVersions: ["v1"]
        resources: ["deployments"]
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUNyRENDQVpRQ0NRRHRKeXBrK0JyTy9UQU5CZ2txaGtpRzl3MEJBUXNGQURBWE1SVXdFd1lEVlFRRERBeGgKWkcxcGMzTnBiMjVmWTJFd0lCY05Nakl3TXpFNU1EWXhNVFExV2hnUE1qSTVOakF4TURJd05qRXhORFZhTUJjeApGVEFUQmdOVkJBTU1ER0ZrYldsemMybHZibDlqWVRDQ0FTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDCkFRb0NnZ0VCQU1BSEZPemZFVUoxbTJLelpiV2FrS0tJWWNqdEVVU2NHUVhkbFFPaXFndXN5SnB6RjVGdW1NNE0KdjNHVnZ2Y2dJcDMzWTd2YjBJZlh1Q1l4Wkt6Z015WmEvUG93dVVpZDk3b3RzWDRVVHNuWkdwT0ZhaUtlTldEYQo4L0t4RFpHZnBr [...]
      service:
        namespace: default
        name: webhook
        path: "/mutate"
