goTest/k8s/webhookConfiguration.yaml

# 웹훅으로 보내야 하는 리소스 요청을 k8에 알려주는 역할
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  name: pod-mutating
webhooks:
  - name: mutating-test.kakaobank.svc.cluster.local
    clientConfig: # admission controller server에 대한 구성
      service: ### admission Review요청을 보낼 서비스
        name: mutating-test # admission controller server 의 서비스명
        namespace: kakaobank # 내 admission controller server 가 어디있는지
        path: "/test" # admission controller가 이 웹훅 요청을 수신할 경로
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUMyakNDQWNJQ0NRQzJEaHlQUndpRndUQU5CZ2txaGtpRzl3MEJBUXNGQURBdk1TMHdLd1lEVlFRRERDUkIKWkcxcGMzTnBiMjRnUTI5dWRISnZiR3hsY2lCWFpXSm9iMjlySUVSbGJXOGdRMEV3SGhjTk1qSXdNekU1TURVdwpNak13V2hjTk1qSXdOREU0TURVd01qTXdXakF2TVMwd0t3WURWUVFERENSQlpHMXBjM05wYjI0Z1EyOXVkSEp2CmJHeGxjaUJYWldKb2IyOXJJRVJsYlc4Z1EwRXdnZ0VpTUEwR0NTcUdTSWIzRFFFQkFRVUFBNElCRHdBd2dnRUsKQW9JQkFRREZBZjYrK2RHYkl6YkhKZFRqT2NCUFZCd0NxRlZFNDk5RjlhSjZYTTIyVHVJaFJUY1RxenROSzFETApLeDBDdjhLQTAw [...]
    rules: # Pod생성시에 이 작업을 수행하겠다.
      - operations: ["CREATE"]
        apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["pods"]
    #failurePolicy: Ignore
